force-app/main/default/objects/Patent_Family__c/Patent_Family__c.object-meta.xml
<CustomObject>
    <label>Patent Family</label>
    <nameField>
        <label>Patent Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patent Family</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>