force-app/main/default/objects/Patent_Family__c/fields/EOU_Quality__c.field-meta.xml
<CustomField>
    <fullName>EOU_Quality__c</fullName>
    <label>EOU Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>