force-app/main/default/objects/Patent_Family__c/fields/Seller_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Seller_Restrictions__c</fullName>
    <label>Seller Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>