force-app/main/default/objects/Patent_Family__c/fields/SEP_EOUs_Completed__c.field-meta.xml
<CustomField>
    <fullName>SEP_EOUs_Completed__c</fullName>
    <label>SEP EOUs Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>