force-app/main/default/objects/Patent_Family__c/fields/Technology_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>Technology_Lifecycle__c</fullName>
    <label>Technology Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>